// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion close accordions via accordion props props dynamicly 1`] = `
<div
  className="accordion"
  role="tablist"
>
  <div
    accordion={true}
    disabled={undefined}
    expanded={false}
    onClick={[Function]}
  >
    Fake Child
  </div>
  <div
    accordion={true}
    disabled={undefined}
    expanded={false}
    onClick={[Function]}
  >
    Fake Child
  </div>
</div>
`;

exports[`Accordion different className 1`] = `
<div
  className="testCSSClass"
  role={null}
>
  <div
    accordion={false}
    disabled={undefined}
    expanded={false}
    onClick={[Function]}
  >
    Fake Child
  </div>
  <div
    accordion={false}
    disabled={undefined}
    expanded={false}
    onClick={[Function]}
  >
    Fake Child
  </div>
</div>
`;

exports[`Accordion different className with the same activeItems prop 1`] = `
<div
  className="test-2"
  role="tablist"
>
  <div
    accordion={true}
    disabled={undefined}
    expanded={false}
    onClick={[Function]}
  >
    Fake Child
  </div>
  <div
    accordion={true}
    disabled={undefined}
    expanded={true}
    onClick={[Function]}
  >
    Fake Child
  </div>
</div>
`;

exports[`Accordion expand accordion via accordion props dynamicly 1`] = `
<div
  className="accordion"
  role="tablist"
>
  <div
    accordion={true}
    disabled={undefined}
    expanded={false}
    onClick={[Function]}
  >
    Fake Child
  </div>
  <div
    accordion={true}
    disabled={undefined}
    expanded={true}
    onClick={[Function]}
  >
    Fake Child
  </div>
</div>
`;

exports[`Accordion expand multiple accordions via accordion props props dynamicly 1`] = `
<div
  className="accordion"
  role={null}
>
  <div
    accordion={false}
    disabled={undefined}
    expanded={false}
    onClick={[Function]}
  >
    Fake Child
  </div>
  <div
    accordion={false}
    disabled={undefined}
    expanded={true}
    onClick={[Function]}
  >
    Fake Child
  </div>
  <div
    accordion={false}
    disabled={undefined}
    expanded={true}
    onClick={[Function]}
  >
    Fake Child
  </div>
</div>
`;

exports[`Accordion expand multiple accordions via accordion props props dynamicly with default
        expanded on accordion items 1`] = `
<div
  className="accordion"
  role={null}
>
  <div
    accordion={false}
    disabled={undefined}
    expanded={false}
    onClick={[Function]}
  >
    Fake Child
  </div>
  <div
    accordion={false}
    disabled={undefined}
    expanded={true}
    onClick={[Function]}
  >
    Fake Child
  </div>
  <div
    accordion={false}
    disabled={undefined}
    expanded={true}
    onClick={[Function]}
  >
    Fake Child
  </div>
</div>
`;

exports[`Accordion handleClick function accordion false 1`] = `
<div
  className="accordion"
  role={null}
>
  <div
    accordion={false}
    disabled={undefined}
    expanded={false}
    onClick={[Function]}
  >
    Fake Child
  </div>
  <div
    accordion={false}
    disabled={undefined}
    expanded={true}
    onClick={[Function]}
  >
    Fake Child
  </div>
</div>
`;

exports[`Accordion handleClick function accordion false 2`] = `
<div
  className="accordion"
  role={null}
>
  <div
    accordion={false}
    disabled={undefined}
    expanded={false}
    onClick={[Function]}
  >
    Fake Child
  </div>
  <div
    accordion={false}
    disabled={undefined}
    expanded={false}
    onClick={[Function]}
  >
    Fake Child
  </div>
</div>
`;

exports[`Accordion handleClick function accordion false 3`] = `
<div
  className="accordion"
  role={null}
>
  <div
    accordion={false}
    disabled={undefined}
    expanded={true}
    onClick={[Function]}
  >
    Fake Child
  </div>
  <div
    accordion={false}
    disabled={undefined}
    expanded={true}
    onClick={[Function]}
  >
    Fake Child
  </div>
</div>
`;

exports[`Accordion handleClick function accordion true 1`] = `
<div
  className="accordion"
  role="tablist"
>
  <div
    accordion={true}
    disabled={undefined}
    expanded={false}
    onClick={[Function]}
  >
    Fake Child
  </div>
  <div
    accordion={true}
    disabled={undefined}
    expanded={true}
    onClick={[Function]}
  >
    Fake Child
  </div>
</div>
`;

exports[`Accordion handleClick function accordion true 2`] = `
<div
  className="accordion"
  role="tablist"
>
  <div
    accordion={true}
    disabled={undefined}
    expanded={false}
    onClick={[Function]}
  >
    Fake Child
  </div>
  <div
    accordion={true}
    disabled={undefined}
    expanded={false}
    onClick={[Function]}
  >
    Fake Child
  </div>
</div>
`;

exports[`Accordion handles disabled children 1`] = `
<div
  className="accordion"
  role={null}
>
  <div
    accordion={false}
    disabled={true}
    expanded={false}
    onClick={[Function]}
  >
    Fake Child
  </div>
  <div
    accordion={false}
    disabled={undefined}
    expanded={false}
    onClick={[Function]}
  >
    Fake Child
  </div>
</div>
`;

exports[`Accordion pre expand accordion via accordion props 1`] = `
<div
  className="accordion"
  role="tablist"
>
  <div
    accordion={true}
    disabled={undefined}
    expanded={true}
    onClick={[Function]}
  >
    Fake Child
  </div>
  <div
    accordion={true}
    disabled={undefined}
    expanded={false}
    onClick={[Function]}
  >
    Fake Child
  </div>
</div>
`;

exports[`Accordion pre expand accordion via accordion props vs accordion item props. Expanded only second item. 1`] = `
<div
  className="accordion"
  role="tablist"
>
  <div
    accordion={true}
    disabled={undefined}
    expanded={false}
    onClick={[Function]}
  >
    Fake Child
  </div>
  <div
    accordion={true}
    disabled={undefined}
    expanded={true}
    onClick={[Function]}
  >
    Fake Child
  </div>
</div>
`;

exports[`Accordion pre expand accordion via accordion props with custom key 1`] = `
<div
  className="accordion"
  role="tablist"
>
  <div
    accordion={true}
    disabled={undefined}
    expanded={false}
    onClick={[Function]}
  >
    Fake Child
  </div>
  <div
    accordion={true}
    customKey="custom"
    disabled={undefined}
    expanded={true}
    onClick={[Function]}
  >
    Fake Child
  </div>
</div>
`;

exports[`Accordion pre expand multiple accordions via accordion props 1`] = `
<div
  className="accordion"
  role={null}
>
  <div
    accordion={false}
    disabled={undefined}
    expanded={true}
    onClick={[Function]}
  >
    Fake Child
  </div>
  <div
    accordion={false}
    disabled={undefined}
    expanded={false}
    onClick={[Function]}
  >
    Fake Child
  </div>
  <div
    accordion={false}
    disabled={undefined}
    expanded={true}
    onClick={[Function]}
  >
    Fake Child
  </div>
</div>
`;

exports[`Accordion pre expanded accordion 1`] = `
<div
  className="accordion"
  role="tablist"
>
  <div
    accordion={true}
    disabled={undefined}
    expanded={true}
    onClick={[Function]}
  >
    Fake Child
  </div>
  <div
    accordion={true}
    disabled={undefined}
    expanded={false}
    onClick={[Function]}
  >
    Fake Child
  </div>
</div>
`;

exports[`Accordion pre expanded accordion when accordion is false 1`] = `
<div
  className="accordion"
  role={null}
>
  <div
    accordion={false}
    disabled={undefined}
    expanded={true}
    onClick={[Function]}
  >
    Fake Child
  </div>
  <div
    accordion={false}
    disabled={undefined}
    expanded={true}
    onClick={[Function]}
  >
    Fake Child
  </div>
</div>
`;

exports[`Accordion renders correctly with accordion false 1`] = `
<div
  className="accordion"
  role={null}
>
  <div
    accordion={false}
    disabled={undefined}
    expanded={false}
    onClick={[Function]}
  >
    Fake child
  </div>
  <div
    accordion={false}
    disabled={undefined}
    expanded={false}
    onClick={[Function]}
  >
    Fake child
  </div>
</div>
`;

exports[`Accordion renders correctly with min params 1`] = `
<div
  className="accordion"
  role="tablist"
>
  <div
    accordion={true}
    disabled={undefined}
    expanded={false}
    onClick={[Function]}
  >
    Fake child
  </div>
  <div
    accordion={true}
    disabled={undefined}
    expanded={false}
    onClick={[Function]}
  >
    Fake child
  </div>
</div>
`;

exports[`Accordion works with multiple pre expanded accordion. Extra expands are just ignored. 1`] = `
<div
  className="accordion"
  role="tablist"
>
  <div
    accordion={true}
    disabled={undefined}
    expanded={true}
    onClick={[Function]}
  >
    Fake Child
  </div>
  <div
    accordion={true}
    disabled={undefined}
    expanded={false}
    onClick={[Function]}
  >
    Fake Child
  </div>
</div>
`;
